objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Amount_involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup which pulls the amount of hours involved into the campaign member record</description>
        <label>Amount involved</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Members (Amount involved)</relationshipLabel>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Calc__c</fullName>
        <description>Field used for TCS reporting</description>
        <formula>if( OR( ISPICKVAL( Status ,&quot;Attended&quot;), ISPICKVAL( Status ,&quot;Attended (recorded on website by YP)&quot;)),1, if(or(ISPICKVAL(Status , &quot;Responded - attending&quot;),ISPICKVAL(Status , &quot;Responded - attending &amp; bringing friend&quot;)),0,NULL ))</formula>
        <label>Campaign Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cluster_2012__c</fullName>
        <formula>Contact.Cluster__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster 2012</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EEdit_For_Contact__c</fullName>
        <formula>HYPERLINK(Id+&apos;/e?retURL=%2FTCS%2FTCSPortal_MeetingEventList?id=&apos;+ ContactId +&apos;%26saveURL=%2FTCS%2FTCSPortal_MeetingEventList?id=&apos;+ContactId+&apos;%26cid=&apos;+ContactId ,&apos;Edit&apos;, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(Id+&apos;/e?retURL=%2FTCS%2FTCSPortal_CampaignMemberList?id=&apos;+CampaignId+&apos;%26saveURL=%2FTCS%2FTCSPortal_CampaignMemberList?id=&apos;+CampaignId,&apos;Edit&apos;, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>Feedback on the event</description>
        <inlineHelpText>Feedback and thoughts on the event</inlineHelpText>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours_attended__c</fullName>
        <formula>IF(ISPICKVAL(Status, &quot;Attended&quot;),Campaign.Length_of_event_hours__c , IF(ISPICKVAL(Status, &quot;Attended-half event&quot;),Campaign.Length_of_event_hours__c / 2, NULL))</formula>
        <label>Hours attended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logistical_needs__c</fullName>
        <description>Updated by workflow</description>
        <inlineHelpText>Updated by workflow</inlineHelpText>
        <label>Logistical needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_consent_received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to show that PG consent has been received</description>
        <inlineHelpText>Please check this box only if you require and have received parent/guardian&apos;s consent.</inlineHelpText>
        <label>PG consent received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_as_Number__c</fullName>
        <formula>CASE( Rating__c , &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating as number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_starts__c</fullName>
        <description>Formula which generates stars to indicate the rating of the event</description>
        <formula>IMAGE(  CASE(Rating__c,  &quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;, &quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;, &quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;,  &quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;,  &quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;,  &quot;/img/samples/stars_000.gif&quot;),  &quot;rating&quot;)</formula>
        <inlineHelpText>Formula which generates stars to indicate the rating of the event</inlineHelpText>
        <label>Rating stars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Level1__c</fullName>
        <inlineHelpText>Updated by workflow</inlineHelpText>
        <label>Support Level</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCN_ID__c</fullName>
        <description>Pull through of TCN ID, used in TCN reporting</description>
        <formula>Contact.Account_s_TCN_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCN ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCS_Involvement__c</fullName>
        <formula>Contact.TCS_Involvement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCS Involvement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>TCSGrads</fullName>
        <active>true</active>
        <description>The Challenge Society Grads</description>
        <label>TCSGrads</label>
    </recordTypes>
</CustomObject>